MonetDB/src/modules/plain/Tests/alarm.stable.out.WindowsNT
stdout of test 'alarm` in directory 'src/modules/plain` itself:


# 10:02:06 >  
# 10:02:06 >  Mtimeout -timeout 60 Mserver "--config=/ufs/niels/data/rc/Linux-i686/etc/monet.conf" --debug=10 --set "monet_mod_path=/ufs/niels/data/rc/Linux-i686/lib/MonetDB" --set "gdk_dbfarm=/ufs/niels/data/rc/Linux-i686/var/MonetDB/dbfarm" --set "sql_logdir=/ufs/niels/data/rc/Linux-i686/var/MonetDB/log" --set mapi_port=40764 --set sql_port=58576 --set monet_prompt= --trace --dbname=mTests_src_modules_plain  < alarm.milM
# 10:02:06 >  

# Monet Database Server V4.3.16_rc04
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for i686-redhat-linux-gnu/32bit; dynamically linked.
module("alarm");
test_alarm();
[ 15 ]
!ERROR: CMDalarm: not implemented
!ERROR: CMDalarm: operation failed.
quit();

# 10:02:38 >  
# 10:02:38 >  Done.
# 10:02:38 >  

